--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,10 +1,21 @@
-FROM node:18-alpine
+# home/Dockerfile
+
+FROM node:20-slim
 
 WORKDIR /app
 
-COPY package.json pnpm-lock.yaml ./
-RUN npm install -g pnpm && pnpm install
+# pnpm ni o'rnatish
+RUN npm install -g pnpm
 
+# package.json va pnpm-lock.yaml fayllarini nusxalash
+COPY package.json .
+COPY pnpm-lock.yaml .
+
+# NPM paketlarini o'rnatish
+RUN pnpm install
+
+# Barcha manbalarni nusxalash
 COPY . .
 
-CMD ["pnpm", "run", "dev"]
+# Loyihani ishga tushirish
+CMD ["pnpm", "run", "dev"] 
