--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,35 @@
+version: "3.8"
+
 services:
   auth:
     build:
       context: ./auth
-    ports:
-      - "3001:3000"
+      dockerfile: Dockerfile
     volumes:
-      - ./auth:/app
+      - ./auth:/app # Auth loyihasi uchun bind mount
+      - /app/node_modules # Konteyner ichidagi node_modules papkasini bind mount qilmaslik
+    ports:
+      - "5173:5173"
+    command: pnpm run dev -- --host
 
   home:
     build:
       context: ./home
-    ports:
-      - "3002:3000"
+      dockerfile: Dockerfile
     volumes:
-      - ./home:/app
+      - ./home:/app # Home loyihasi uchun bind mount
+      - /app/node_modules # Konteyner ichidagi node_modules papkasini bind mount qilmaslik
+    ports:
+      - "5174:5173"
+    command: pnpm run dev -- --host
 
-  # shared-ui:
-  #   build:
-  #     context: ./shared-ui
-  #   ports:
-  #     - "3003:3000"
-  #   volumes:
-  #     - ./shared-ui:/app
+  common:
+    build:
+      context: ./common
+      dockerfile: Dockerfile
+    volumes:
+      - ./common:/app # Home loyihasi uchun bind mount
+      - /app/node_modules # Konteyner ichidagi node_modules papkasini bind mount qilmaslik
+    ports:
+      - "5175:5175"
+    command: pnpm run dev -- --host
